# visiter

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  schemas
.github/workflows/: ci.yml  wheels.yml
demos/: 01_one_data_many_views.sh  02_pipeline_to_pdf.sh  03_validate_in_pipeline.sh  04_string_iteration.sh  06_analyze_condensation.sh  07_analyze_shortest_paths.sh  README.md  analytics_condensation.vit  analytics_condensation_rendered.sh  analytics_cycles_and_centrality.sh  analytics_cycles_and_centrality.vit  analytics_shortest_paths_highlighted.sh  analytics_shortest_paths_highlighted.vit  anchor_radius_crop_and_recolor.sh  anchor_radius_full.vit  anchor_radius_recolored.vit  anchor_radius_tight.vit  atm_banknote_combinations.sh  atm_banknote_combinations.vit  custom_key_type.sh  custom_key_type.vit  descent.vit  nim_matchstick_game.sh  nim_matchstick_game.vit  non_integer_values.sh  non_integer_values.vit  op_label_stable_coloring.sh  pipeline_to_svg_and_pdf.sh  pipeline_to_svg_and_pdf.vit  pseudo_edges_bound.vit  pseudo_edges_bound_and_max_depth.sh  pseudo_edges_max_depth.vit  schema_validation_in_pipeline.sh  sliding_puzzle.py  sliding_puzzle.sh  stable_coloring_appended.vit  stable_coloring_baseline.vit  stable_coloring_pinned.vit  tictactoe.py  tictactoe.sh  (+6 more)
demos/applications/: tictactoe.vit  water_jugs.vit
demos/basics/: atm.vit  golden_ratio.vit  nim.vit  string_iteration.vit
demos/data/: descent.expr
demos/integration/: condensation.vit  inspection.vit  shortest_paths.vit
demos/python/applications/: tictactoe.py  tictactoe.vit  water_jugs.vit
demos/python/basics/: collatz.vit  golden_ratio.vit  reverse_collatz.vit
demos/python/integration/: inspection.vit  shortest_paths.vit
demos/python/rendering/: ghost_stubs.vit  multi_op_fills.vit
demos/rendering/: color_stability.vit  cropping.vit  custom_colors.vit  ghost_stubs.vit  multi_op_fills.vit
demos/rust/: golden_ratio.vit  nim.vit  strings.vit  water_jugs.vit
demos/rust/applications/: water_jugs.vit
demos/rust/basics/: collatz.vit  golden_ratio.vit  nim.vit  reverse_collatz.vit  string_iteration.vit  strings.vit
docs/: README.md  comparison.md  generate_images.sh  manual.md  tutorial.md
native/: Cargo.toml  README.md  pyproject.toml
native/src/: lib.rs
scripts/: check_pypi_version.py  generate_demo_outputs.py
src/visiter/: __init__.py  _accel.py  analytics.py  builder.py  cli.py  dot.py  filters.py  graph.py  io.py  iteration.py  render_helpers.py  rustgen.py  storage.py  to_dot.py  validate.py
src/visiter/schemas/v1/: graph.schema.json
tests/: test_accel.py  test_analytics.py  test_builder.py  test_cli.py  test_demos.py  test_fluent.py  test_golden.py  test_handle.py  test_iteration.py  test_publish_guard.py  test_rust.py  test_schema.py  test_storage.py  test_to_dot.py
