[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "visiter"
version = "0.1.0"
description = "Build and visualize iteration graphs from rule-based state transitions."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jakob Stemberger", email = "jakob.stemberger@gmail.com"}]
requires-python = ">=3.9"
keywords = ["graph", "iteration", "visualization", "graphviz", "bfs", "state-transition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "graphviz>=0.20",
    "sympy>=1.10",
    "rich-click>=1.8",
]

[project.optional-dependencies]
validate = [
    "jsonschema>=4.18",
]
dev = [
    "pytest>=7",
    "build>=1.0",
    "twine>=4",
    "jsonschema>=4.18",
]

[project.scripts]
visiter = "visiter.cli:main"

[project.urls]
Homepage = "https://github.com/yaccob/visiter"
Issues = "https://github.com/yaccob/visiter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/visiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
