[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "visiter"
dynamic = ["version"]
description = "Build and visualize orbit graphs for discrete iterations under guarded rules."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jakob Stemberger", email = "jakob.stemberger@gmail.com"}]
requires-python = ">=3.11"
keywords = ["graph", "iteration", "visualization", "graphviz", "bfs", "orbit-graph", "dynamical-systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "graphviz>=0.20",
    "sympy>=1.10",
]

[project.optional-dependencies]
validate = [
    "jsonschema>=4.18",
]
analytics = [
    "networkx>=3.0",
]
storage = [
    "pyarrow>=14",
]
native = [
    "visiter_native>=0.3.0",
]
dev = [
    "pytest>=7",
    "build>=1.0",
    "twine>=4",
    "jsonschema>=4.18",
    "networkx>=3.0",
]

[project.scripts]
viter = "visiter.cli:main"

[project.urls]
Homepage = "https://github.com/yaccob/visiter"
Issues = "https://github.com/yaccob/visiter/issues"

[tool.hatch.version]
path = "src/visiter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/visiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
