[package]
name = "visiter_native"
version = "0.1.0"
edition = "2021"
description = "Optional native BFS engine for visiter (Path A: Python callbacks via PyO3)."
license = "MIT"

[lib]
name = "visiter_native"
crate-type = ["cdylib"]

[dependencies]
# abi3-py311: one stable-ABI wheel per platform works on CPython 3.11+,
# so distribution doesn't need a wheel per Python version.
pyo3 = { version = "0.23", features = ["abi3-py311"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
