[package]
name = "visiter_native"
version = "0.4.0"
edition = "2021"
description = "Optional native BFS engine for visiter (Path A: Python callbacks via PyO3)."
license = "MIT"

[lib]
name = "visiter_native"
crate-type = ["cdylib"]

[dependencies]
# abi3-py311: one stable-ABI wheel per platform works on CPython 3.11+,
# so distribution doesn't need a wheel per Python version.
pyo3 = { version = "0.23", features = ["abi3-py311"] }

# Native .vitgraph writer: read the lean rustgen dump and emit the columnar
# store (Arrow IPC file + zstd, in a zip container) without a Python round-trip.
# Modular arrow subcrates keep the wheel lean vs. the umbrella `arrow` crate.
arrow-array = "58"
arrow-schema = "58"
arrow-ipc = { version = "58", features = ["zstd"] }
zip = { version = "2", default-features = false }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
